--- a/analisiscobertura/package.json
+++ b/analisiscobertura/package.json
@@ -16,6 +16,8 @@
     "cordova-android": "^10.0.1",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-android-permissions": "^1.1.3",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-network-information": "^3.0.0",
     "cordova-plugin-signal-strength": "^1.0.3",
@@ -29,7 +31,8 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
-      }
+      },
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "browser",
