Modificado el plugin SignalStrength.
Modificado el plugin SignalStrength para detectar también la intensidad de la señal wifi.
Añadidos también todo el set de iconos de inicio de la App para Android e iOS.

--- a/analisiscobertura/platforms/browser/www/manifest.json
+++ b/analisiscobertura/platforms/browser/www/manifest.json
@@ -6,12 +6,6 @@
   "version": "es.aragon.analisiscobertura",
   "description": "Analisis de cobertura",
   "author": "Apache Cordova Team",
-  "icons": [
-    {
-      "src": "res/icon/icon.png",
-      "type": "image/png",
-      "sizes": "undefinedxundefined"
-    }
-  ],
+  "icons": [],
   "start_url": "index.html"
 }
