Añadido plugin network information para iOS
Terminado de añadir el plugin network information para iOS.

--- a/analisiscobertura/package.json
+++ b/analisiscobertura/package.json
@@ -33,9 +33,9 @@
       "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "browser",
       "android",
-      "ios"
+      "ios",
+      "browser"
     ]
   }
 }
