--- a/analisiscobertura/package.json
+++ b/analisiscobertura/package.json
@@ -13,7 +13,7 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^10.0.1",
+    "cordova-android": "^12.0.1",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-android-permissions": "^1.1.3",
@@ -33,9 +33,9 @@
       "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "android",
       "ios",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
