--- a/analisiscobertura/package.json
+++ b/analisiscobertura/package.json
@@ -17,6 +17,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.3.0",
     "cordova-plugin-android-permissions": "^1.1.3",
+    "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-network-information": "^3.0.0",
     "cordova-plugin-signal-strength": "^1.0.3",
@@ -30,7 +31,8 @@
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
       },
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "browser",
